<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="10dp"
    android:gravity="center"
    android:orientation="vertical">


    <com.google.android.material.button.MaterialButton
        android:id="@+id/toENButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_weight="1"
        android:text="@string/to_en_button" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/toItButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_weight="1"
        android:text="@string/to_it_button" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/toArButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_weight="1"
        android:text="@string/to_ar_button" />
</LinearLayout>